fixed navigation scrolling issue on mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,7 @@ body{
 div, h1, h2, h3, span, a, ul, li, nav{
     font-family: 'Cuprum', sans-serif;
 }
+
+.no-scroll{
+    overflow: hidden;
+}
